# yt-dlp-GUI

./: .gitignore  CMakeLists.txt  README.md  app.rc  build.sh  copy_deps.sh
scripts/: linux-desktop.sh
src/: main.cpp  main_gui.cpp  main_linux.cpp  main_win.cpp  main_window.cpp  main_window.hpp
src/resources/: resources.qrc  style_loader.cpp  style_loader.hpp
src/resources/qss/: dark_var.qss  light_var.qss  style.qss
